--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -1,15 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 body{
     background-color: rgb(0, 0, 0);
     color: rgb(250, 250, 250);
+    font-family: 'Lora', serif;
 }
 h2{
     font-size: 5vw;
     text-align: center;
     padding: 5vw;
 }
+h3{
+    font-size: 8vw;
+    text-align: center;
+    padding: 5vw;
+}
 h4{
     text-align: center;
     font-size: 4vw;
+}
+h5{
+    text-align: center;
+    font-size: 2vw;
+    font-family: 'Lora', serif;   
 }
 .touch{
     display: flex;
