--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,4 +1,9 @@
 @media (max-width: 680px){
+    h5{
+        text-align: center;
+        font-size: 4vw;
+        font-family: 'Lora', serif;   
+    }
     #dedo{
         width: 30vw;
         height: auto;
@@ -11,6 +16,16 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr); 
         justify-items: center;
+    }
+    #hannabach{
+        padding: 1vw;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); 
+        justify-items: center;
+    }
+    .marca{
+        width: 40vw;
+        padding: 5vw;
     }
     .no{
         display: none;
