--- a/scss/_secciones.scss
+++ b/scss/_secciones.scss
@@ -11,3 +11,9 @@
     grid-template-columns: repeat(3, 1fr); 
     justify-items: center;
 }
+#hannabach{
+    padding-top: 3vw;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    justify-items: center;
+}
